# testnet-manager

./: .dockerignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  README.md  main.py  pyproject.toml  skaffold.yaml  task-scheduler.py
.github/workflows/: docker-build-push.yml  docker-build.yml  publish_deploy.yml  smoke_test.yml  test.yaml  test.yml
app/: __init__.py
app/config/: constants.py  log_config.py  network_configuration.py  settings.py  ws_pool.py
app/lib/: balance_utils.py  collator_account.py  collator_manager.py  collator_mint.py  collator_moonbeam.py  collator_tick.py  cron_tasks.py  kubernetes_client.py  log_utils.py  network_utils.py  node_utils.py  parachain_manager.py  runtime_utils.py  session_keys.py  staking_utils.py  stash_accounts.py  substrate.py  validator_manager.py
app/routers/: apis.py  read_apis.py  sudo_apis.py  views.py
app/tasks/: apis.py  views.py
app/templates/: collators.html  index.html  node_info.html  nodes.html  parachains.html  runtime_info.html  tasks.html  validators.html
local-kubernetes/: Makefile  README.md
local-kubernetes/charts/: helmfile-rococo.yaml  helmfile-wococo.yaml  helmfile.yaml  values-local-rococo-bootnode.yaml  values-local-wococo-bootnode.yaml  values-localrococo-bootnode.yaml  values-localrococo-validator-a.yaml  (+6 more)
scripts/: collator_selection.py  export-relaychain-registered-parachains.py  get-extrinsic-call.py  list_all_calls.py  moonbeam-seed.py  onboard-parachain.py  parachain_info.py  register-collator.py  send-xcm.py  sudo_xcm_upgrade_parachain.py  upgrade-parachain.py
tests/: balance_utils_test.py  docker-compose.yml  node_utils_test.py  parachain_manager_test.py  session_keys_test.py  smoke_test.sh  stash_account_test.py  substrate_test.py  test_constants.py  test_utils.py  validator_manager_pos_test.py  validator_manager_test.py
(+22 files in other folders)
