[tool.poetry]
name = "testnet-manager"
version = "1.0.0"
description = "DevOps toolkit to operate Polkadot testnets"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
APScheduler = "^3.10.1"
gunicorn = "^20.1.0"
uvicorn = "^0.21.1"
kubernetes = "^26.1.0"
substrate-interface = "^1.6.2"
Jinja2 = "^3.1.2"
fastapi = "^0.95.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
testcontainers = "^3.7.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
