[tool.poetry]
name = "testnet-manager"
version = "1.1.0"
description = "DevOps toolkit to operate Polkadot testnets"
authors = ["Devops Parity"]

[tool.poetry.dependencies]
python = "^3.12"
PyYAML = "^6.0.1"
APScheduler = "^3.10.4"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"
kubernetes = "^29.0.0"
substrate-interface = "^1.7.7"
Jinja2 = "^3.1.3"
fastapi = "^0.110.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
testcontainers = "^3.7.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
